@@ -14,6 +14,8 @@ import dev.olog.msc.R
 import dev.olog.msc.app.shortcuts.AppShortcuts
 import dev.olog.msc.constants.AppConstants
 import dev.olog.msc.domain.gateway.LastFmGateway
+import dev.olog.msc.domain.gateway.PodcastGateway
+import dev.olog.msc.domain.gateway.SongGateway
 import dev.olog.msc.domain.interactor.prefs.SleepTimerUseCase
 import dev.olog.msc.presentation.image.creation.ImagesCreator
 import dev.olog.msc.presentation.theme.AppTheme
@@ -37,6 +39,8 @@ class App : BaseApp() {
     @Suppress("unused") @Inject lateinit var keepDataAlive: KeepDataAlive
 
     @Inject lateinit var lastFmGateway: LastFmGateway
+    @Inject lateinit var songGateway: SongGateway
+    @Inject lateinit var podcastGateway: PodcastGateway
     @Inject lateinit var alarmManager: AlarmManager
     @Inject lateinit var sleepTimerUseCase: SleepTimerUseCase
 
