@@ -15,6 +15,8 @@ object AppConstants {
     const val ACTION_CONTENT_VIEW = "$TAG.action.content.view"
 
     var useFakeData = false
+    var IGNORE_MEDIA_STORE_COVERS = false
+
 
     const val SHORTCUT_SEARCH = "$TAG.shortcut.search"
     const val SHORTCUT_DETAIL = "$TAG.shortcut.detail"
@@ -40,6 +42,7 @@ object AppConstants {
         updateQuickAction(context)
         updateIconShape(context)
         updateLockscreenArtworkEnabled(context)
+        updateIgnoreMediaStoreCovers(context)
     }
 
     fun updateQuickAction(context: Context){
@@ -52,6 +55,10 @@ object AppConstants {
 
     fun updateLockscreenArtworkEnabled(context: Context) {
         SHOW_LOCKSCREEN_IMAGE = getLockscreenArtworkEnabled(context)
+    }
+
+    fun updateIgnoreMediaStoreCovers(context: Context) {
+        IGNORE_MEDIA_STORE_COVERS = getIgnoreMediaStoreCovers(context)
     }
 
     private fun getLockscreenArtworkEnabled(context: Context): Boolean {
@@ -77,6 +84,11 @@ object AppConstants {
             context.getString(R.string.prefs_icon_shape_square) -> ImageShape.RECTANGLE
             else -> throw IllegalArgumentException("image shape not valid=$shape")
         }
+    }
+
+    private fun getIgnoreMediaStoreCovers(context: Context): Boolean {
+        val prefs = PreferenceManager.getDefaultSharedPreferences(context.applicationContext)
+        return prefs.getBoolean(context.getString(R.string.prefs_ignore_media_store_cover_key), false)
     }
 
 }
