@@ -302,4 +302,9 @@
     <string name="prefs_immersive_summary_on">@string/common_enabled</string>
     <string name="prefs_immersive_summary_off">@string/common_disabled</string>
 
+    <string name="prefs_ignore_media_store_cover_key" translatable="false">key_ignore_cover</string>
+    <string name="prefs_ignored_media_store_cover_title">Ignore media store cover</string>
+    <string name="prefs_ignored_media_store_cover_summary_on">@string/common_enabled</string>
+    <string name="prefs_ignored_media_store_cover_summary_off">@string/common_disabled</string>
+
 </resources>
